Fixed z-index about btn

--- a/src/style.css
+++ b/src/style.css
@@ -158,6 +158,7 @@ body #extraUI {
   position: fixed;
   bottom: 5vh;
   right: 5vw;
+  z-index: 3;
 }
 
 .info-icon {
@@ -168,7 +169,7 @@ body #extraUI {
 .modal {
   display: none;
   position: fixed;
-  z-index: 3;
+  z-index: 4;
   left: 0;
   top: 0;
   width: 100%;
